2010-08-25  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        Passing premultiplyAlpha=false to tex{Sub}Image2D loses information (cg)
        https://bugs.webkit.org/show_bug.cgi?id=44566

        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData): Fix the premultiplyAlpha issue for cg.
2010-08-25  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Passing premultiplyAlpha=false to tex{Sub}Image2D loses information (cg)
        https://bugs.webkit.org/show_bug.cgi?id=44566

        * fast/canvas/webgl/gl-teximage-expected.txt: Fix a typo in the file.
        * platform/chromium/test_expectations.txt: Re-enable gl-teximage.html test.
        * platform/mac/Skipped: Ditto.


Canonical link: https://commits.webkit.org/57254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66494 268f45cc-cd09-0410-ab3c-d52691b4dbfc